# barricade-bar

./: Cargo.toml  LICENSE
src/: main.rs  ui.rs
src/lib/: audio.rs  battery.rs  layout.rs  mod.rs  network.rs
src/widgets/: clock.rs  layout.rs  mod.rs
src/widgets/controls/: audio.rs  battery.rs  controls.rs  mod.rs  network.rs  power.rs
