[package]
name = "barricade_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
pulsectl-rs = "0.3.2"
gtk = "0.18"
networkmanager = "0.5"
dbus = "0.9"
hyprland = "0.4.0-beta.3"
anyhow = "1.0"
gtk-layer-shell = "0.7"
tray-icon = "0.19"
gio = "0.18"
chrono = "0.4.44"
pollster = "0.4.0"
stray = "0.1.3"
ksni = "0.2.1"
